Remove direct ZGC support. Fixes https://github.com/korlibs/korge/issues/349